src/index.css
:root {
  --foreground-color: #3b3b3b;
  --background-color: #fbfbfb;
  --subtle-color: #d7d7d7;
  --light-color: #ffffff;
  --positive-color: #d94e4e;
  --negative-color: #6161e2;
  --spacing: 1rem;
  --spacing-m: 2rem;
  --padding: 1rem;
  --radius: 1rem;
}

body {
  background-color: var(--background-color);
  font-family: system-ui;
  color: var(--foreground-color);
}

ul {
  list-style-type: none;
  padding: 0;
}

a {
  text-decoration: none;
  color: inherit;
}

hr {
  border-block-color: var(--subtle-color);
  border-width: 0;
  border-bottom-width: 1px;
  width: 100%;
}

.main-layout {
  min-width: 300px;
  max-width: 720px;
  margin: auto;
  .page-wrapper {
    min-height: 500px;
    margin-top: 2rem;
  }
}

.main-navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;

  menu {
    display: flex;
    gap: 1rem;
  }
}

.dropdown-button {
  ul {
    position: absolute;
    background: #fff;
    border: solid 1px var(--subtle-color);
    border-radius: var(--radius);
    padding: var(--padding);
    min-width: 100px;

    &.show {
      display: flex;
      flex-direction: column;
      gap: var(--spacing);
    }

    &.hide {
      display: none;
    }
  }
}

.article-card {
  display: flex;
  flex-direction: column;
  gap: var(--spacing);
  margin: var(--spacing-m) 0;
  transition: all 200ms;

  title {
    font-size: 2rem;
    margin: var(--spacing) 0;
  }

  &:hover {
    scale: 1.01;
    box-shadow: 0 5px 10px #bebebebe;
  }
}

.article-meta {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.vote-stat {
  height: 1rem;
  display: flex;
  align-items: center;
  gap: calc(var(--spacing) / 2);
  padding: calc(var(--padding) / 2) var(--padding);
  border-radius: 2rem;
  border: none;

  font-weight: 700;
  color: var(--light-color);

  background-color: var(--positive-color);

  svg {
    width: 100%;
    height: 100%;
  }
}

.image-wrapper {
  height: 300px;
  overflow: hidden;
  border-radius: var(--radius);
  img {
    object-fit: cover;
    width: 100%;
  }
}

.content-wrapper,
.layout-wrapper {
  display: flex;
  flex-direction: column;
  gap: var(--spacing);
}

.layout-wrapper {
  gap: var(--spacing-m);
}

/* Spinner */
.spinner {
  width: 48px;
  height: 48px;
  border: 3px solid var(--subtle-color);
  border-radius: 50%;
  display: inline-block;
  position: relative;
  box-sizing: border-box;
  animation: rotation 1s linear infinite;
  margin: auto;
}
.spinner::after {
  content: "";
  box-sizing: border-box;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 56px;
  height: 56px;
  border-radius: 50%;
  border: 3px solid transparent;
  border-bottom-color: var(--foreground-color);
}

@keyframes rotation {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* Comment List */
.comment-card {
  header {
    display: flex;
    justify-content: space-between;
    align-items: center;

    .author {
      font-weight: 700;
    }
    .date {
      color: var(--subtle-color);
    }
  }

  footer {
    display: flex;
    justify-content: end;
    align-items: center;
    gap: var(--spacing);
  }
}

.card {
  background-color: var(--light-color);
  border: solid 1px var(--subtle-color);
  border-radius: var(--radius);
  padding: var(--padding);
}

.icon-btn {
  --size: 2rem;
  width: var(--size);
  height: var(--size);

  display: flex;
  justify-content: center;
  align-items: center;

  background: none;
  border: none;
  color: var(--foreground-color);

  padding: 0.5rem;

  svg {
    height: 100%;
    width: 100%;
  }

  &:disabled {
    color: var(--subtle-color);
  }
}

.vote-wrapper {
  display: flex;
  align-items: center;
  border-radius: 1rem;

  &.positive,
  &.negative {
    color: var(--light-color);

    svg {
      color: var(--light-color);
    }
  }

  &.positive {
    background-color: var(--positive-color);
  }

  &.negative {
    background-color: var(--negative-color);
  }
}

